# NGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
assets/font/: 24x24_template.xcf  8x8_template.xcf
docs/: Doxyfile
include/NGL/: Label.h  List.h  Screen.h  Widget.h
include/NGL/Core/: Core.h
include/NGL/Renderer/: Font.h  RasterObject.h  Renderer.h  Text.h
scripts/: Font.c  image_converter.py
source/NGL/: Label.cpp  List.cpp  Screen.cpp  Widget.cpp
source/NGL/Core/: Core.cpp  UI.cpp
source/NGL/Renderer/: Font.cpp  RasterObject.cpp  Renderer.cpp  Text.cpp
source/NGL/Simulator/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
source/NGL/Simulator/cmake/: dependency_mgmt.cmake  find_qt.cmake
